Changes to Docker

--- a/env.example
+++ b/env.example
@@ -4,7 +4,7 @@ AZURE_CLIENT_SECRET=your_azure_client_secret_here
 AZURE_TENANT_ID=your_azure_tenant_id_here
 
 # Database Configuration
-DATABASE_URL=postgresql://postgres:SD2025COOLGROUPpostgres:5432/user_management
+DATABASE_URL=postgresql://postgres:SD2025COOLGROUP@postgres:5432/user_management
 
 # JWT Secret
 JWT_SECRET=your_jwt_secret_key_here
