--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
       NODE_ENV: production
       PORT: 5000
       DATABASE_URL: postgresql://postgres:SD2025COOLGROUP@postgres:5432/user_management
-      JWT_SECRET: your_jwt_secret_key_here
+      JWT_SECRET: SD2025COOLGROUP_JWT_SECRET_KEY_$(date +%s)
       AZURE_CLIENT_ID: ${AZURE_CLIENT_ID}
       AZURE_CLIENT_SECRET: ${AZURE_CLIENT_SECRET}
       AZURE_TENANT_ID: ${AZURE_TENANT_ID}
