--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
     environment:
       NODE_ENV: production
       PORT: 5000
-      DATABASE_URL: postgresql://postgres:SD2025COOLGROUP@postgres:5432/user_management
+      DATABASE_URL: postgresql://postgres:SD2025COOLGROUP@postgres:5432/user_management?sslmode=disable
       JWT_SECRET: SD2025COOLGROUP_JWT_SECRET_KEY_$(date +%s)
       AZURE_CLIENT_ID: ${AZURE_CLIENT_ID}
       AZURE_CLIENT_SECRET: ${AZURE_CLIENT_SECRET}
