--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -43,11 +43,14 @@ http {
             add_header Cache-Control "public, immutable";
         }
 
-        # Security headers
-        add_header X-Frame-Options "SAMEORIGIN" always;
-        add_header X-Content-Type-Options "nosniff" always;
-        add_header X-XSS-Protection "1; mode=block" always;
-        add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+    # Security headers
+    add_header X-Frame-Options "SAMEORIGIN" always;
+    add_header X-Content-Type-Options "nosniff" always;
+    add_header X-XSS-Protection "1; mode=block" always;
+    add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+    
+    # Allow insecure requests for development
+    add_header Content-Security-Policy "upgrade-insecure-requests" always;
 
         # Health check endpoint
         location /health {
