--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -11,9 +11,21 @@ http {
         server backend:5000;
     }
 
+    # Redirect HTTP to HTTPS
     server {
         listen 80;
         server_name aurora.jguliz.com;
+        return 301 https://$server_name$request_uri;
+    }
+
+    # HTTPS server
+    server {
+        listen 443 ssl http2;
+        server_name aurora.jguliz.com;
+
+        # SSL configuration (will be managed by certbot)
+        ssl_certificate /etc/letsencrypt/live/aurora.jguliz.com/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/aurora.jguliz.com/privkey.pem;
 
         # Frontend
         location / {
