--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,7 +42,7 @@ services:
       dockerfile: Dockerfile
     container_name: user_management_frontend
     environment:
-      REACT_APP_API_URL: http://143.110.148.157:5000
+      REACT_APP_API_URL: https://aurora.jguliz.com
       REACT_APP_AZURE_CLIENT_ID: ${AZURE_CLIENT_ID}
     ports:
       - "3000:80"
