--- a/backend/package.json
+++ b/backend/package.json
@@ -10,24 +10,24 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "helmet": "^7.1.0",
-    "dotenv": "^16.3.1",
-    "pg": "^8.11.3",
-    "jsonwebtoken": "^9.0.2",
+    "axios": "^1.13.2",
     "bcryptjs": "^2.4.3",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
     "express-validator": "^7.0.1",
+    "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
-    "compression": "^1.7.4",
     "passport": "^0.7.0",
     "passport-azure-ad": "^4.3.5",
-    "axios": "^1.6.2"
+    "pg": "^8.11.3"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2",
     "jest": "^29.7.0",
+    "nodemon": "^3.0.2",
     "supertest": "^6.3.3"
   },
   "keywords": [
